--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <header>
         <h1>crypto-dashboard</h1>
         <div>
-            <img src="/images/file-person.svg">
+            <a href="https://itzjcovington.github.io/personal_website/"><img src="/images/file-person.svg"></a>
         </div>
     </header>
     <main>
